objects/Processing_Pipeline__c.object
<CustomObject>
    <fields>
        <fullName>Cosmetic_Repair_Status__c</fullName>
        <label>Cosmetic Repair Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unnecessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Status__c</fullName>
        <label>Diagnostic Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unnecessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Got_Seller_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got Seller Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Got_Wholesale_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Got Wholesale Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Condition_Report_Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Condition Report Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cosmetic_Inspection_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cosmetic Inspection Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Direct_To_Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct To Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inspection_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mechanical Inspection Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Listing_Copy_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Listing Copy Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Photo_Editing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Photo Editing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Photography_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Photography Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quality_Control_Check_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quality Control Check Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Repair_Assessment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Repair Assessment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Repair_Management_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Repair Management Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Top_Features_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Top Features Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wash_And_Detail_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wash And Detail Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wash_Exterior_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wash Exterior Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wash_Interior_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wash Interior Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mechanical_Repair_Status__c</fullName>
        <label>Mechanical Repair Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unnecessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paintless_Dent_Removal_Repair_Status__c</fullName>
        <label>Paintless Dent Removal Repair Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unnecessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Props_Tracker_Notes_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Props Tracker Notes Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Props_Tracker_Notes__c</fullName>
        <label>Props Tracker Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_ID__c</fullName>
        <label>Seller Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity is not a Seller</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Processing Pipelines</relationshipLabel>
        <relationshipName>Processing_Pipelines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_Stage__c</fullName>
        <formula>Text (Seller_Opportunity_ID__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smog_Repair_Status__c</fullName>
        <label>Smog Repair Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unnecessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Listing_Region__c</fullName>
        <formula>Seller_Opportunity_ID__r.Listing_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Listing Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Prelaunch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Prelaunch</label>
        <type>Checkbox</type>
    </fields>
    <label>Processing Pipeline</label>
    <nameField>
        <displayFormat>PrOps-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processing Pipelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>